<resources>
    <string name="app_name">ShoeStore</string>
    <string name="input_email">Email</string>
    <string name="input_password">Password</string>
    <string name="login_button_text">Login</string>
    <string name="create_account_button_text">Create new account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_text">Welcome to the shoe store</string>
    <string name="welcome2_text">Additional welcome stuff</string>
    <string name="welcome_button">Next</string>
    <string name="instruction1_text">Some instructions</string>
    <string name="instruction2_text">More instructions here</string>
    <string name="instruction_button">Go to app</string>

</resources>
